...
    android:orientation="vertical"
    android:layout_gravity="end"
    tools:context=".ui.CrearAlbumFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        app:title="Crear album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:subtitleTextColor="@color/white"
        app:theme="@style/ThemeOverlay.AppCompat"
...
        android:orientation="vertical">
        <Space
            android:layout_width="match_parent"
            android:layout_height="12sp" />

        <EditText
            android:id="@+id/album_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Nombre"
            android:background="@color/white"
            android:hint="@string/Nombre_placeholder"
            android:inputType="text"
...
            android:textColorHint="#546E7A" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="12sp" />

    <EditText
        android:id="@+id/album_cover"
        android:layout_width="match_parent"
        android:maxWidth="488dp"
        android:layout_height="wrap_content"
        android:autofillHints="Cover"
        android:background="@color/white"
        android:hint="@string/Cover_placeholder"
...

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <EditText
            android:id="@+id/album_fecha_lanzamiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Fecha lanzamiento"
            android:background="@color/white"
            android:hint="@string/Lanzamiento_placeholder"
            android:inputType="date"
...

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <Spinner
            android:id="@+id/spinner_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48sp"
            android:background="@color/white"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@+id/title_basic"
...

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <Spinner
            android:id="@+id/spinner_recordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48sp"
            android:background="@color/white"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@+id/title_basic"
...

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <EditText
            android:id="@+id/album_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Descripcion"
            android:background="@color/white"
            android:hint="@string/Descripcion_placeholder"
            android:inputType="text"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/cancel_album_button"
            android:layout_width="wrap_content"
            android:minWidth="120sp"
            android:layout_height="wrap_content"
            android:minHeight="48sp"
            android:background="@color/purple_700"
            android:text="@string/Cancelar_button_text" />

        <Space
            android:layout_width="30dp"
            android:layout_height="48dp"/>

        <Button
            android:id="@+id/post_album_button"
            android:layout_width="wrap_content"
            android:minWidth="120sp"
            android:layout_height="wrap_content"
            android:minHeight="48sp"
            android:background="@color/stroke_color"
            android:text="@string/Crear_button_text" />
...
